--- a/app/src/main/res/layout/item_result_card.xml
+++ b/app/src/main/res/layout/item_result_card.xml
@@ -15,7 +15,7 @@
         <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/recycler_view"></android.support.v7.widget.RecyclerView>
+            android:id="@+id/recycler_view"/>
 
         <include layout="@layout/view_progress_bar" />
     </android.support.v7.widget.CardView>
