--- a/app/src/main/res/layout/fragment_car_list.xml
+++ b/app/src/main/res/layout/fragment_car_list.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v4.widget.SwipeRefreshLayout
+    <com.congxiaoyao.xber_admin.widget.XberSwipeRefreshLayout
         android:id="@+id/swipe_refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -18,7 +18,7 @@
 
         </android.support.v7.widget.RecyclerView>
 
-    </android.support.v4.widget.SwipeRefreshLayout>
+    </com.congxiaoyao.xber_admin.widget.XberSwipeRefreshLayout>
 
     <com.bigkoo.quicksidebar.QuickSideBarView
         android:layout_alignParentTop="true"
